FEAT : Create History Fragment For History Meal

--- a/Fatsecret/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/Fatsecret/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -10,6 +10,12 @@
         android:icon="@drawable/ic_search"
         android:title="Search" />
 
+    <!-- ✅ CHANGE: Use historyFragment ID instead of nav_history -->
+    <item
+        android:id="@+id/historyFragment"
+        android:icon="@drawable/ic_history"
+        android:title="History" />
+
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
